--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
+# Jekyll
 _site
 .sass-cache
 .jekyll-cache
 .jekyll-metadata
 vendor
+Gemfile.lock
+
+# Obsidian
+.obsidian/
+
+# MacOS
+.DS_Store
