--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,34 @@
+# Bundler cache
+.bundle
+vendor
+Gemfile.lock
+
 # Jekyll
 _site
 .sass-cache
 .jekyll-cache
 .jekyll-metadata
-vendor
-Gemfile.lock
 
 # Obsidian
 .obsidian/
 
-# MacOS
+# RubyGems
+*.gem
+
+# NPM dependencies
+node_modules
+package-lock.json
+
+# IDE configurations
+.idea
+.vscode/*
+!.vscode/settings.json
+!.vscode/extensions.json
+!.vscode/tasks.json
+
+# Misc
+_sass/vendors
+assets/js/dist
+
+# macOS
 .DS_Store
