Update custom domain

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ description: >- # used by seo meta and the atom feed, e.g., A minimal, responsiv
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
-url: "https://chandlertee.github.io"
+url: "https://chandlerthompson.dev"
 
 github:
   username: chandlertee # change to your GitHub username
