--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,7 @@ title: Chandler Thompson # the main title
 tagline: Thoughts and opinions are my own # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed, e.g., A minimal, responsive and feature-rich Jekyll theme for technical writing.
-  A personal blog where I share thoughts on software engineering, game development, 
-  productivity, and whatever else sparks my curiosity.
+  A personal blog where I share thoughts on software engineering, game design, and whatever else sparks my curiosity.
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
@@ -171,6 +170,16 @@ collections:
   tabs:
     output: true
     sort_by: order
+  til:
+    output: true
+    layout: post
+    permalink: /til/:title/
+
+jekyll_compose:
+  default_front_matter:
+    til:
+      layout: "til"
+      refactor: true
 
 defaults:
   - scope:
@@ -193,6 +202,12 @@ defaults:
     values:
       layout: page
       permalink: /:title/
+  - scope:
+      path: "" # An empty string here means all files in the project
+      type: til
+    values:
+      layout: til
+      comments: true
 
 sass:
   style: compressed
