Fix til description max length config

--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,9 @@ til_feed:
     TIL stands for Today I Learned. This is a collection of random bits — created "on the fly" and not edited. 
     Contents might not be completely accurate.
 
+til_description:
+  max_length: 1000
+
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
 url: "https://chandlerthompson.dev"
